// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesComponent should create view only for hgv and trl with populated data 1`] = `
<vtm-notes
  activeRecord={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Notes
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-notes"
      >
        <span
          class="notes-section"
        >
          some notes
        </span>
      </dd>
    </div>
    
    
  </dl>
</vtm-notes>
`;

exports[`NotesComponent should create view only for psv populated data 1`] = `
<vtm-notes
  activeRecord={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Remarks
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-remarks"
      >
        <span
          class="notes-section"
        >
          some remarks
        </span>
      </dd>
    </div>
    
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Dispensations
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-dispensations"
      >
        <span
          class="notes-section"
        >
          -
        </span>
      </dd>
    </div>
  </dl>
</vtm-notes>
`;
